# team-project-app

./: .gitignore  Dockerfile  README.md  SETUP.md  SMOKE.md  config.example.toml  hermes-agent-wiki.md  pyproject.toml  spec.md
cron/: README.md
skills/second-brain/: SKILL.md
src/brain/: cli.py  db.py  mdblocks.py  remotes.py  repo.py  search.py  sync.py
src/brain/migrations/: 0001_init.sql  0002_sync_v2.sql
tests/: conftest.py  test_core.py  test_mdblocks.py  test_search.py  test_skill.py  test_sync.py
